# ampy

./: .gitignore  README.md  pyproject.toml  setup.py
ampy/core/: input.py  structs.py  utils.py
ampy/mcmc/: mcmc.py  parameters.py  priors.py
ampy/models/: base.py  fireball.py
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/configs/: index.rst  inference.rst  modeling.rst  observation.rst  plugins.rst  run.rst
docs/source/inference/: engine.rst  index.rst  priors.rst  samplers.rst
docs/source/plotting/: api.rst  index.rst
docs/source/plotting/products/: lightcurves.rst
example/: diagnose.py  run.py
scripts/: run.py
src/ampy/: ampy.py
src/ampy/core/: __init__.py  obs.py  params.py  structs.py  utils.py
src/ampy/defaults/: __init__.py  modeling.py  plotting.py
src/ampy/inference/: engine.py  params.py  priors.py
src/ampy/inference/samplers/: __init__.py  ensemble.py  tempered.py
src/ampy/modeling/: engine.py  plugins.py
src/ampy/modeling/models/: base.py  builtin.py
src/ampy/products/: plotting.py  utils.py
test/: test_flux.py  test_models.py  test_priors.py  test_run.py  test_values.py
test/resources/: synthetic.csv
test/resources/configs/: registry.toml
test/resources/configs/plugins/: calibration.toml  chisquared.toml  dust_mw.toml  dust_sf.toml  powerlaw.toml
