[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampy"
version = "0.1.0"
description = "Afterglow Modeling in Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dylan Dutton" }
]
urls = { Homepage = "https://github.com/astrodyl/ampy" }

dependencies = [
  "astropy",
  "dust_extinction",
  "emcee",
  "numba",
  "numpy",
  "pandas",
  "ptemcee @ git+https://github.com/astrodyl/ptemcee.git",
  "scipy",
  "arviz",
  "corner",
  "matplotlib",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
